# MyVibeCoding

./: .gitignore  README.md
FlowPilot_mac/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
FlowPilot_mac/browser-extension/: manifest.json  package-lock.json  package.json  tsconfig.json
FlowPilot_mac/docs/: macos-development.md  macos-distribution.md
FlowPilot_mac/macos-native/: Package.swift
FlowPilot_mac/scripts/: first-run-macos.command  macos-personal-package.test.mjs  macos-release-config.mjs  macos-release-config.test.mjs  native-macos-package.test.mjs  package-macos-dist.sh  package-macos-distribution.mjs  package-macos-local.mjs  package-macos-personal.mjs  package-macos-release.mjs  package-windows-dist.ps1
FlowPilot_mac/src/: App.test.tsx  App.tsx  index.css  styles.css
FlowPilot_mac/src-tauri/: Cargo.toml  tauri.conf.json
FlowPilot_mac/src-tauri/icons/: icon.icns
FlowPilot_mac/src-tauri/src/: app_state.rs  browser_bridge.rs  commands.rs  export.rs  lib.rs  permissions.rs  tray.rs
FlowPilot_mac/src-tauri/src/collector/: active_window.rs  idle.rs  macos.rs  mod.rs  service.rs  session_merger.rs  snapshot.rs
FlowPilot_mac/src-tauri/src/domain/: activity.rs  classifier.rs  mod.rs  presets.rs  rules.rs
FlowPilot_mac/src-tauri/src/storage/: repository.rs  schema.rs
MyCaptureProgram/: .gitignore  Package.swift  README.md
MyCaptureProgram/Resources/: AppIcon.icns
MyCaptureProgram/scripts/: build-release-zip.sh  (+5 more)
MyMacCalendar/: .gitignore  Package.swift  README.md
MyMacClean/: .gitignore  Package.swift  README.md
MyMacFinder/: .gitignore  Package.resolved  Package.swift  README.md
MyMacStats/: Package.swift  README.md
docs/: MyMacStats-design.md
(+526 files in other folders)
