[package]
name = "flowpilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# Tauri defaults are expanded manually so we can omit `common-controls-v6`: this
# Windows loader fails on `comctl32.dll::TaskDialogIndirect`. Enable future
# tray/menu features explicitly.
tauri = { version = "2.11.2", default-features = false, features = ["compression", "dynamic-acl", "tray-icon", "x11", "dbus", "wry"] }
tauri-plugin-log = "2"
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
anyhow = "1.0.102"
tiny_http = "0.12.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = { version = "0.25", features = ["link"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSString"] }
